# python-sse-mcp-client

./: .gitignore  README.md  SSE_MCP_GUIDE.md  STREAMABLE_HTTP_GUIDE.md  pyproject.toml  requirements.txt
.github/workflows/: sonar.yml
src/: __init__.py  openfda_demo.py  sse_client_example.py  streamable_http_demo.py
